# ObjectDetection

./: CMakeLists.txt  HOGINRIASimpleTest.cpp  HOGINRIATesting.cpp  HOGINRIATraining.cpp  HOGPascalSimpleTest.cpp  HOGPascalTraining.cpp  HOGTesting.cpp  HOGTraining.cpp  INRIATestingUtils.cpp  INRIATestingUtils.h  README.md  lib_svm_wrapper.cpp  lib_svm_wrapper.h  svm_light_wrapper.cpp  svm_light_wrapper.h  svm_wrapper.cpp  svm_wrapper.h
