cmake_minimum_required(VERSION 2.8)
project(HOGTraining)
find_package(OpenCV REQUIRED)
find_package(SVMLight REQUIRED)
find_package(TinyXML2 REQUIRED)
find_package(GLOG REQUIRED)
add_executable(HOGINRIATraining HOGINRIATraining.cpp svm_light_wrapper.h svm_light_wrapper.cpp)
add_executable(HOGINRIATesting HOGINRIATesting.cpp svm_light_wrapper.h svm_light_wrapper.cpp)
add_executable(HOGINRIASimpleTest HOGINRIASimpleTest.cpp svm_light_wrapper.h svm_light_wrapper.cpp)
add_executable(HOGPascalTraining HOGPascalTraining.cpp svm_light_wrapper.h svm_light_wrapper.cpp)
add_executable(HOGTesting HOGTesting.cpp)
link_directories()
target_link_libraries(HOGINRIATraining ${OpenCV_LIBS} ${SVMLight_COMMON_LIB} ${SVMLight_LEARN_LIB} ${SVMLight_HIDEO_LIB} ${GLOG_LIB_1} ${GLOG_LIB_2} ${GLOG_LIB_3} ${GLOG_LIB_4} ${GLOG_LIB_5} ${GLOG_LIB_6} ${GLOG_LIB_7})
target_link_libraries(HOGINRIATesting ${OpenCV_LIBS} ${SVMLight_COMMON_LIB} ${SVMLight_LEARN_LIB} ${SVMLight_HIDEO_LIB})
target_link_libraries(HOGINRIASimpleTest ${OpenCV_LIBS} ${SVMLight_COMMON_LIB} ${SVMLight_LEARN_LIB} ${SVMLight_HIDEO_LIB})
target_link_libraries(HOGPascalTraining ${OpenCV_LIBS} ${SVMLight_COMMON_LIB} ${SVMLight_LEARN_LIB} ${SVMLight_HIDEO_LIB} ${TinyXML2_LIB})
target_link_libraries(HOGTesting ${OpenCV_LIBS})
