cmake_minimum_required(VERSION 2.8)
project(ObjectDetection)
find_package(OpenCV REQUIRED)
find_package(LibSVM REQUIRED)
find_package(TinyXML2 REQUIRED)
find_package(GLOG REQUIRED)
add_executable(HOGINRIATraining HOGINRIATraining.cpp lib_svm_wrapper.h lib_svm_wrapper.cpp)
add_executable(HOGINRIATesting HOGINRIATesting.cpp lib_svm_wrapper.h lib_svm_wrapper.cpp)
add_executable(HOGINRIASimpleTest HOGINRIASimpleTest.cpp lib_svm_wrapper.h lib_svm_wrapper.cpp)
add_executable(HOGPascalTraining HOGPascalTraining.cpp lib_svm_wrapper.h lib_svm_wrapper.cpp)
add_executable(HOGTesting HOGTesting.cpp)
target_link_libraries(HOGINRIATraining ${OpenCV_LIBS} ${LibSVM_LIB} ${GLOG_LIB_1} ${GLOG_LIB_2} ${GLOG_LIB_3} ${GLOG_LIB_4} ${GLOG_LIB_5} ${GLOG_LIB_6} ${GLOG_LIB_7})
target_link_libraries(HOGINRIATesting ${OpenCV_LIBS} ${LibSVM_LIB})
target_link_libraries(HOGINRIASimpleTest ${OpenCV_LIBS} ${LibSVM_LIB})
target_link_libraries(HOGPascalTraining ${OpenCV_LIBS} ${LibSVM_LIB} ${TinyXML2_LIB})
target_link_libraries(HOGTesting ${OpenCV_LIBS})
