cmake_minimum_required(VERSION 2.8)
project(ObjectDetection)

find_package(OpenCV REQUIRED)
find_package(LibSVM REQUIRED)
find_package(TinyXML2 REQUIRED)
find_package(GLOG REQUIRED)

set(Boost_USE_STATIC_LIBS OFF) 
set(Boost_USE_MULTITHREADED ON)  
set(Boost_USE_STATIC_RUNTIME OFF) 
find_package(Boost 1.56.0 COMPONENTS filesystem system REQUIRED)
if(Boost_FOUND)
	include_directories(${Boost_INCLUDE_DIRS})
	message(status " Boost libs: " ${Boost_LIBRARIES})
endif()

add_executable(HOGINRIATraining HOGINRIATraining.cpp svm_wrapper.h svm_wrapper.cpp INRIATestingUtils.h INRIATestingUtils.cpp)
add_executable(HOGINRIATesting HOGINRIATesting.cpp svm_wrapper.h svm_wrapper.cpp INRIATestingUtils.h INRIATestingUtils.cpp)
add_executable(HOGINRIASimpleTest HOGINRIASimpleTest.cpp svm_wrapper.h svm_wrapper.cpp INRIATestingUtils.h INRIATestingUtils.cpp)
add_executable(HOGPascalTraining HOGPascalTraining.cpp svm_wrapper.h svm_wrapper.cpp)
add_executable(HOGPascalSimpleTest HOGPascalSimpleTest.cpp svm_wrapper.h svm_wrapper.cpp)

target_link_libraries(HOGINRIATraining ${OpenCV_LIBS} ${LibSVM_LIB} ${GLOG_LIB_1} ${GLOG_LIB_2} ${GLOG_LIB_3} ${GLOG_LIB_4} ${GLOG_LIB_5} ${GLOG_LIB_6} ${GLOG_LIB_7} ${Boost_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARIES})
target_link_libraries(HOGINRIATesting ${OpenCV_LIBS} ${LibSVM_LIB} ${GLOG_LIB_1} ${GLOG_LIB_2} ${GLOG_LIB_3} ${GLOG_LIB_4} ${GLOG_LIB_5} ${GLOG_LIB_6} ${GLOG_LIB_7} ${Boost_LIBRARIES})
target_link_libraries(HOGINRIASimpleTest ${OpenCV_LIBS} ${LibSVM_LIB} ${GLOG_LIB_1} ${GLOG_LIB_2} ${GLOG_LIB_3} ${GLOG_LIB_4} ${GLOG_LIB_5} ${GLOG_LIB_6} ${GLOG_LIB_7} ${Boost_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARIES})
target_link_libraries(HOGPascalTraining ${OpenCV_LIBS} ${LibSVM_LIB} ${TinyXML2_LIB} ${GLOG_LIB_1} ${GLOG_LIB_2} ${GLOG_LIB_3} ${GLOG_LIB_4} ${GLOG_LIB_5} ${GLOG_LIB_6} ${GLOG_LIB_7} ${Boost_LIBRARIES})
target_link_libraries(HOGPascalSimpleTest ${OpenCV_LIBS} ${GLOG_LIB_1} ${GLOG_LIB_2} ${GLOG_LIB_3} ${GLOG_LIB_4} ${GLOG_LIB_5} ${GLOG_LIB_6} ${GLOG_LIB_7} ${Boost_LIBRARIES})